--- a/ng-app/src/index.html
+++ b/ng-app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgApp</title>
+  <title>Event Organizing Management System</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
